# DLA

./: .gitmodules  Readme.md
C++/: CMakeLists.txt
C++/cmake/: init.cmake
C++/src/: CMakeLists.txt  DLA.cpp  DLA.h  geometry.h  main.cpp  moves.cpp  moves.h  py_dla.cpp  py_dlaMesh.cpp  py_tools.cpp  py_tools.h  randomGenerator.cpp  randomGenerator.h  tools.cpp  tools.h  traits.h
C++/src/lattice/: cells.h  lattice.cpp  lattice.h  particles.cpp  particles.h  tools.h
C++/tst/: CMakeLists.txt  main.cpp  tst-DLA.cpp  tst-lattice.cpp  tst-randomGenerator.cpp
examples/: cluster3d.ipynb
python/: dla.py  dla_continuum.py  test_dla.py
test/: Untitled.ipynb  cluster.XYZ
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
